Sat Jun  7 17:39:52 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	https://svn.code.sf.net/p/elftoolchain/code/trunk@r3067

Tue Jun  3 18:44:57 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Tue Jun  3 18:43:15 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	https://svn.code.sf.net/p/elftoolchain/code/trunk@r3062

Sun Jun  1 12:48:45 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Sun Jun  1 12:47:37 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	https://svn.code.sf.net/p/elftoolchain/code/trunk@r3057

Tue May 27 21:36:22 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Tue May 27 21:35:10 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	https://svn.code.sf.net/p/elftoolchain/code/trunk@r3052

Sun May 25 15:49:25 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Sun May 25 15:48:09 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	https://svn.code.sf.net/p/elftoolchain/code/trunk@r3042

Fri May  9 22:48:04 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Fri May  9 22:45:12 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	https://svn.code.sf.net/p/elftoolchain/code/trunk@r3036

Sun May  4 15:15:06 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Sun May  4 15:13:35 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	https://svn.code.sf.net/p/elftoolchain/code/trunk@r3034

Sun Apr 20 13:53:31 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Sun Apr 20 13:51:11 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with