@@ -1,3 +1,7 @@
+Sat Jun  7 17:40:56 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* current-trunk: Merged from upstream-trunk.
+
 Sat Jun  7 17:39:52 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* upstream-trunk: Sync'd with
